# openai_project_roles

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
openai_project_roles/: app.py  cli.py  default_project_roles.yaml  default_project_roles_old.yaml  openai_api_key_names.csv  openai_project_budgets.yaml  openai_project_usage.csv  openai_usage_by_api_key.csv
openai_project_roles.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
openai_project_roles/app/: __init__.py  common.py  main.py  tab_keys.py  tab_roles.py  tab_usage.py
tests/: conftest.py  test_common.py  test_main.py  test_tab_keys_helpers.py  test_tab_roles.py  test_usage_helpers.py
